--- a/工作任務.md
+++ b/工作任務.md
@@ -1,22 +1,42 @@
-# 第五週
+# 第八週 - CSS 模組化管理
 
-#### 1. AAPD 合作說明
-
-課程將與 AAPD 合作，讓同學可以使用 AAPD 的課程的設計稿
-分組切版多頁式網頁，參加條件與時間軸：
-
-- 8/2 填寫意願表單：https://forms.gle/tdv2tf5hEJw8UEXW8
-- 8/30 前：達到第六週作業等級 2（至少做兩頁含 RWD，其中一頁必須為首頁）
-- 9/2 ~ 9/3：進行分組，每組 3 ~ 4 人
-- 9/3 ~ 9/14：與 AAPD 團隊配對，並透過六角教練與設計團隊溝通確認設計稿細節。
-- 9/15 ~ 9/20：設計團隊依據細節修改，並持續優化
-- 9/23 ~ 10/4：六角切版直播班學員切版挑戰
-- 10/5：成果發表會
-
-![image](https://hackmd.io/_uploads/H1P5nxqYA.png)
+* 記得錄影
+* 獎品截止日 [說明](https://hackmd.io/@hexschool/By3Q7SAIC/%2F6cTcBIoPQHWY_mD6lTRZ_A)
+* 最終作業說明（揪團完成）：
+    * 可以自己找組員，像是專題班的就能直接用專題班的分組，如果是直播班的可以在頻道中找組員
+    * 分組繳交時，需要全部的人都一起繳交，然後標上組員的暱稱，以便於團隊一起審核通過
+    * 每位成員在 Git 紀錄上至少要有完成一頁
+* AAPD 合作報名開始
+    1. 達到第六週作業等級 2（至少做兩頁含 RWD，其中一頁必須為首頁）
+    2. 填寫報名表單（填寫至 8/25(日) 23:59）：https://forms.gle/aZa7sa6qajf7zE8S7
 
 
-如果有興趣，請在 8/5 前填寫意願表單：https://forms.gle/tdv2tf5hEJw8UEXW8
+## 截止繳交作業時間點
+
+- 主線、心得牆任務繳交期限：9/8(日) 23:59:59
+- Google 表單獎品申請截止日：9/10(二) 23:59:59
+- 9/13(五) 80% 獎品兌現 - 【網頁動態】CSS 動態的運用技巧
+
+## 模組化設計概念
+
+- 討論篇
+- 架構篇
+- 元件篇
+
+## 討論
+
+### 結構設計討論，你是哪個等級？(v
+
+- Level 1：頁面(page)， 有一頁就新增一頁
+- Level 2：佈局([Layout](https://www.figma.com/design/ZQn0etbtIsCrmkHqFeeLKo/%E5%88%87%E7%89%88%E7%9B%B4%E6%92%AD%E7%8F%AD---%E7%9B%B4%E6%92%AD%E6%95%99%E6%9D%90?node-id=176-2&t=a3hnPjoSn5e0fDaa-0))， 會額外拉出來處理
+- Level 3：格線(grid) 會有自己的格線系統
+- Level 4：工具(helper、util)，會將常用的 class 拉出來獨立使用
+- Level 5：模組(component) 會將常用的內容拉出來模組化
+- Level 6：會用 Bootstrap 或 Tailwind 來組合 component
+    - [React Tailwind Component](https://github.com/Webabil/modal-react-tailwind/blob/master/src/component/Modal.jsx)
+    - [Vue Tailwind Component](https://github.com/OCRVblockchain/vue-tailwind-pagination/blob/main/src/components/VueTailwindPagination/index.vue) -> 注意：這其實要收費，所以用的人有限
+
+----
 
 # 工作任務
 
