modify ejs & scss

--- a/工作任務.md
+++ b/工作任務.md
@@ -56,105 +56,79 @@
   - [v]  CSS 檔案關聯
   - [v]  部署 GitHub Pages 測試
     - [v]  變更vite.config.js `// base: '/Repository 的名稱/'`
-  - [v] 自定義css 調整
+  - [v] 自定義 scss 元件
     - [v] custom variables
     - [v] custom utilities
     - [v] custom variables map
+    - [ ] customm components buttons
   
 網頁尺寸:
   Desktop(width:1296px) lg
   Mobile (width:375px) sm
 
-首頁 index.html
+[ ] 頁首 header
+[v] 頁尾 footer
 
+
+1.首頁 index.html
 - [ ]  撰寫桌面版
-  - [v]  撰寫 navbar
-  - [v]  撰寫 banner
-  - [v]  撰寫 熱門主題 區塊
-  - [v]  撰寫 精選文章 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 母親節強檔活動 區塊
-  - [ ]  撰寫 大家都在看 區塊 (引入 swiperjs 套件)
-         **左邊選單樣式調整**  -> 交作業
-  - [v]  撰寫 品味生活 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 今天又不知道去哪裡了嗎? 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 想看甚麼主題由你決定 區塊
-  - [v]  撰寫 footer 區塊
-
+  - [ ]  撰寫 ?
 - [ ]  撰寫行動版
-  - [v]  撰寫 navbar
-  - [v]  撰寫 banner
-  - [v]  撰寫 熱門主題 區塊
-  - [v]  撰寫 精選文章 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 母親節強檔活動 區塊
-  - [v]  撰寫 大家都在看 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 品味生活 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 今天又不知道去哪裡了嗎? 區塊 (引入 swiperjs 套件)
-  - [v]  撰寫 想看甚麼主題由你決定 區塊
-  - [v]  撰寫 footer 區塊
+  - [ ]  撰寫 ?
 
-文章內容頁1  article01.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 banner
-- [v]  撰寫行動版
-  - [v]  撰寫 banner
-
-文章內容頁2  article02.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 banner
-- [v]  撰寫行動版
-  - [v]  撰寫 banner
-
-註冊頁  register.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 註冊表單 區塊
-- [v]  撰寫行動版
-  - [v]  撰寫 註冊表單 區塊
-
-登入頁 login.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 登入表單 區塊
-- [v]  撰寫行動版
-  - [v]  撰寫 登入表單  區塊
-
-訂閱頁  subscription.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 訂閱方案 區塊
-- [v]  撰寫行動版 訂閱頁  subscription.html
-  - [v]  撰寫 訂閱方案 區塊  
-
-待修改項目: 兩顆(年繳 月繳)按鈕
-
-付款表單頁 pay.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 付款表單 區塊  
-- [v]  撰寫行動版
-  - [v]  撰寫 付款表單 區塊
-  
-付款成功頁 pay-success.html
-
-- [v]  撰寫桌面版
-  - [v]  撰寫 付款成功 區塊  
-- [v]  撰寫行動版
-  - [v]  撰寫 付款成功 區塊
-
-
-關於我們頁 about.html
-
+2.課程列表頁 course.html
 - [ ]  撰寫桌面版
-  - [ ]  撰寫 banner
-  - [ ]  撰寫 關於我們
-  - [ ]  撰寫 風格特色
-  - [ ]  撰寫 大事記
-  - [ ]  撰寫 品牌願景
+  - [ ]  撰寫 ?
 - [ ]  撰寫行動版
-  - [ ]  撰寫 banner
-  - [ ]  撰寫 關於我們
-  - [ ]  撰寫 風格特色
-  - [ ]  撰寫 大事記
-  - [ ]  撰寫 品牌願景
+  - [ ]  撰寫 ?
+
+3.課程介紹列表頁 course-detail.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+4.講師介紹頁 teacher.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+
+5.購物車頁 shopping-cart.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+
+6.結帳流程頁 pay.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+7.購買完成頁 pay-success.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+8.登入頁 login.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+9.註冊頁 register.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
+10.我的課程頁 mycourse.html
+- [ ]  撰寫桌面版
+  - [ ]  撰寫 ?
+- [ ]  撰寫行動版
+  - [ ]  撰寫 ?
+
